cmd/rabbitmq-sample/k8s/01-rabbitmq-sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-sample
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rabbitmq-sample
  template:
    metadata:
      labels:
        app: rabbitmq-sample
    spec:
      containers:
      - name: rabbitmq-sample
        image: entropypool/rabbitmq-sample:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-sample
  namespace: kube-system
spec:
  ports:
  - name: api
    port: 8080
