cmd/rabbitmq-sample/k8s/02-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rabbitmq-sample-npool-top-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: rabbitmq-sample
    k8s.kuboard.cn/workload: rabbitmq-sample
    kubernetes.io/ingress.class: "traefik-internet"
spec:
  rules:
  - host: api.npool.top
    http:
      paths:
      - path: /rabbitmq-sample
        backend:
          serviceName: rabbitmq-sample
          servicePort: http

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rabbitmq-sample-xpool-top-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: rabbitmq-sample
    k8s.kuboard.cn/workload: rabbitmq-sample
    kubernetes.io/ingress.class: "traefik-internet"
spec:
  rules:
  - host: api.xpool.top
    http:
      paths:
      - path: /rabbitmq-sample
        backend:
          serviceName: rabbitmq-sample
          servicePort: http
